--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Project Title 3</h5>
-                <p class="card-text">Highlight its features or technologies used.Highlight its features or technologies used.</p>
+                <p class="card-text">Add project here</p>
                 <a
                   href="https://github.com/yourrepo3"
                   class="btn btn-primary"
