--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <div class="card-body">
                 <h5 class="card-title">Project Title 1</h5>
                 <p class="card-text">
-                  Description of Project 1. A brief explanation of what it does.
+                  Description of Project 1
                 </p>
                 <a
                   href="https://github.com/yourrepo1"
@@ -120,8 +120,7 @@
               <div class="card-body">
                 <h5 class="card-title">Project Title 2</h5>
                 <p class="card-text">
-                  Description of Project 2. Highlight its features or
-                  technologies used.
+                  Description of Project 2
                 </p>
                 <a
                   href="https://github.com/yourrepo2"
@@ -137,7 +136,7 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Project Title 3</h5>
-                <p class="card-text">Add project here</p>
+                <p class="card-text">Description of Project 3</p>
                 <a
                   href="https://github.com/yourrepo3"
                   class="btn btn-primary"
