--- a/index.html
+++ b/index.html
@@ -171,12 +171,12 @@
         <div class="row g-4">
           <!-- Project 1 -->
           <div class="col-lg-4 col-md-6">
-            <a href="https://github.com/yourrepo1" target="_blank" style="text-decoration: none; color: inherit;">
+            <a href="./Tindog/index.html" target="_blank" style="text-decoration: none; color: inherit;">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">Project Title 1</h5>
+                  <h5 class="card-title">Project 1- Tin Dog</h5>
                   <p class="small-desc">
-                    Description of Project 1
+                    Tin Dog is a website where your dog can meet other dogs in the area!
                   </p>
                   <div class="go-corner"></div>
                 </div>
@@ -185,12 +185,12 @@
           </div>
           <!-- Project 2 -->
           <div class="col-lg-4 col-md-6">
-            <a href="https://github.com/yourrepo2" target="_blank" style="text-decoration: none; color: inherit;">
+            <a href="./pricingtable/index.html" target="_blank" style="text-decoration: none; color: inherit;">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">Project Title 2</h5>
+                  <h5 class="card-title">Project 2- Pricing Table</h5>
                   <p class="small-desc">
-                    Description of Project 2
+                    Learn how to create a pricing table using CSS flexbox
                   </p>
                   <div class="go-corner"></div>
                 </div>
@@ -199,12 +199,12 @@
           </div>
           <!-- Project 3 -->
           <div class="col-lg-4 col-md-6">
-            <a href="https://github.com/yourrepo3" target="_blank" style="text-decoration: none; color: inherit;">
+            <a href="./bootstrapintro/index.html" target="_blank" style="text-decoration: none; color: inherit;">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">Project Title 2</h5>
+                  <h5 class="card-title">Project 3- Bootstrap Intro </h5>
                   <p class="small-desc">
-                    Description of Project 3
+                    Learn how to use Bootstrap by implementing a prebuilt card
                   </p>
                   <div class="go-corner"></div>
                 </div>
