--- a/Tindog/index.html
+++ b/Tindog/index.html
@@ -15,7 +15,7 @@ integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEw
 .div{
 display:flex;
 }
-.container{
+.colorfulBG px-4 py-5{
 background-image:linear-gradient(to right, pink, purple, skyblue);
 }
 
@@ -124,8 +124,13 @@ background-image:linear-gradient(to right, pink, purple, skyblue);
 <body>
 
 <!-- navbar -->
-<div class="container px-4 py-5" id="hanging icons">
-<img class="d-block mx-auto mb-4" src="iphone.png" alt="iphone" style="width:20%;">
+<div class="colorfulBG px-4 py-5" id="hanging icons">
+<img 
+ class="d-block mx-auto mb-4" 
+ src="iphone.png"
+ alt="iphone" 
+ style="width:20%;"
+ />
  <h1>Meet new and intersting dogs nearby.</h1>
 </div>
 
@@ -257,7 +262,7 @@ background-image:linear-gradient(to right, pink, purple, skyblue);
 <!-- footer -->
 
 <footer class="py-5 my-5 border-top">
-  <div class="container d-flex justify-content-between align-items-start">
+  <div class="colorfulBG px-4 py-5">
     <div class="col">
       <p>© 2024</p>
     </div>
