--- a/Tindog/index.html
+++ b/Tindog/index.html
@@ -15,7 +15,7 @@ integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEw
 .div{
 display:flex;
 }
-.colorfulBG px-4 py-5{
+.colorfulBG{
 background-image:linear-gradient(to right, pink, purple, skyblue);
 }
 
@@ -296,61 +296,95 @@ background-image:linear-gradient(to right, pink, purple, skyblue);
 
 <!-- footer -->
 
-<footer class="py-5 my-5 border-top">
-  <div class="colorfulBG px-4 py-5">
-    <div class="col">
-      <p>© 2024</p>
-    </div>
-    <div class="col">
-      <h5>Section</h5>
-      <ul class="nav flex-column">
-        <li><a href="#" class="nav-link">Home</a></li>
-        <li><a href="#" class="nav-link">Features</a></li>
-        <li><a href="#" class="nav-link">Pricing</a></li>
-        <li><a href="#" class="nav-link">FAQs</a></li>
-        <li><a href="#" class="nav-link">About</a></li>
-      </ul>
-    </div>
-    <div class="col">
-      <h5>Section</h5>
-      <ul class="nav flex-column">
-        <li><a href="#" class="nav-link">Home</a></li>
-        <li><a href="#" class="nav-link">Features</a></li>
-        <li><a href="#" class="nav-link">Pricing</a></li>
-        <li><a href="#" class="nav-link">FAQs</a></li>
-        <li><a href="#" class="nav-link">About</a></li>
-      </ul>
-    </div>
-    <div class="col">
-      <h5>Section</h5>
-      <ul class="nav flex-column">
-        <li><a href="#" class="nav-link">Home</a></li>
-        <li><a href="#" class="nav-link">Features</a></li>
-        <li><a href="#" class="nav-link">Pricing</a></li>
-        <li><a href="#" class="nav-link">FAQs</a></li>
-        <li><a href="#" class="nav-link">About</a></li>
-      </ul>
-    </div>
-  </div>
-</footer>
+ class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top"
+    >
+      <div class="colorfulBG px-4 py-5" id="hanging icons">
+        <div class="col mb-3">
+          <a
+            href="/"
+            class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none"
+          >
+            <svg class="bi me-2" width="40" height="32">
+              <use xlink:href="#bootstrap"></use>
+            </svg>
+          </a>
+          <p class="text-body-secondary">© TinDog</p>
+        </div>
 
+        <div class="col mb-3"></div>
 
+        <div class="col mb-3">
+          <h5>Section</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Features</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Pricing</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">About</a>
+            </li>
+          </ul>
+        </div>
 
+        <div class="col mb-3">
+          <h5>Section</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Features</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Pricing</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">About</a>
+            </li>
+          </ul>
+        </div>
 
+        <div class="col mb-3">
+          <h5>Section</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Features</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Pricing</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">About</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
 
+    <div class="card-header"></div>
 
-
-
-
-
-
-
-
-
-<div class="card-header"></div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
 
 
 
