--- a/Tindog/index.html
+++ b/Tindog/index.html
@@ -119,7 +119,11 @@ background-image:linear-gradient(to right, pink, purple, skyblue);
   text-align: center;
   margin: 20px 0;
 }
-
+.footer {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+    }
 
 </style>    
 <body>
