--- a/Tindog/index.html
+++ b/Tindog/index.html
@@ -229,7 +229,7 @@ background-image:linear-gradient(to right, pink, purple, skyblue);
   </p>
   <div class="testimonial-image">
     <img src="dog-img.jpg" alt="dog" />
-    <p>Robbie, New York</p>
+    <p>Pebbles, New York</p>
   </div>
   <div class="logos">
     <img src="techcrunch.png" alt="TechCrunch" />
