--- a/index.html
+++ b/index.html
@@ -211,6 +211,35 @@
               </div>
             </a>
           </div>
+<!-- Project 4 -->
+          <div class="col-lg-4 col-md-6">
+            <a href=".\Speed Test website\index.html" target="_blank" style="text-decoration: none; color: inherit;">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Project 4- Speed Test website </h5>
+                  <p class="small-desc">
+                    Calculate the reaction time of a user by using Javascript
+                  </p>
+                  <div class="go-corner"></div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+<!-- Project 5 -->
+          <div class="col-lg-4 col-md-6">
+            <a href=".\Dice Game\dicee.html" target="_blank" style="text-decoration: none; color: inherit;">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Project 5- Dice Roll Game </h5>
+                  <p class="small-desc">
+                    Learn how to create a random dice roll game using Javascript
+                  </p>
+                  <div class="go-corner"></div>
+                </div>
+              </div>
+            </a>
+          </div>
     </section>
 
     <!-- Contact Section -->
