--- a/index.html
+++ b/index.html
@@ -7,40 +7,44 @@
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+      rel="stylesheet" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <!-- Navigation Bar -->
     <header>
-        <nav class="navbar navbar-expand-lg">
-            <div class="container">
-                <!-- Toggler Button for Collapsed Menu -->
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-    
-                <!-- Collapsible Menu -->
-                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+      <nav class="navbar navbar-expand-lg">
+        <div class="container">
+          <!-- Toggler Button for Collapsed Menu -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarNav" aria-controls="navbarNav"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <!-- Collapsible Menu -->
+          <div class="collapse navbar-collapse justify-content-center"
+            id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item"><a class="nav-link"
+                  href="#home">Home</a></li>
+              <li class="nav-item"><a class="nav-link"
+                  href="#portfolio">Portfolio</a></li>
+              <li class="nav-item"><a class="nav-link"
+                  href="#contact">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
-    
 
     <!-- Homepage Section -->
     <section id="home">
       <div
-        class="container d-flex align-items-center justify-content-between flex-wrap"
-      >
+        class="container d-flex align-items-center justify-content-between flex-wrap">
         <!-- Text Content -->
         <div class="text-content">
           <h1>Brooke Dominguez</h1>
@@ -62,32 +66,27 @@
                 data-bs-slide-to="0"
                 class="active"
                 aria-current="true"
-                aria-label="Slide 1"
-              ></button>
+                aria-label="Slide 1"></button>
               <button
                 type="button"
                 data-bs-target="#homeCarousel"
                 data-bs-slide-to="1"
-                aria-label="Slide 2"
-              ></button>
+                aria-label="Slide 2"></button>
               <button
                 type="button"
                 data-bs-target="#homeCarousel"
                 data-bs-slide-to="2"
-                aria-label="Slide 3"
-              ></button>
+                aria-label="Slide 3"></button>
               <button
                 type="button"
                 data-bs-target="#homeCarousel"
                 data-bs-slide-to="3"
-                aria-label="Slide 4"
-              ></button>
+                aria-label="Slide 4"></button>
               <button
                 type="button"
                 data-bs-target="#homeCarousel"
                 data-bs-slide-to="4"
-                aria-label="Slide 5"
-              ></button>
+                aria-label="Slide 5"></button>
             </div>
 
             <!-- Carousel Items -->
@@ -97,41 +96,36 @@
                 <img
                   src="images\brooked.jpg"
                   class="d-block w-100"
-                  alt="Image 1"
-                />
+                  alt="Image 1" />
               </div>
               <!-- Slide 2 -->
               <div class="carousel-item">
                 <img
                   src="images\cruisebrooke.jpg"
                   class="d-block w-100"
-                  alt="Image 2"
-                />
+                  alt="Image 2" />
               </div>
               <!-- Slide 3 -->
               <div class="carousel-item">
                 <img
                   src="images\handbrooke.jpg"
                   class="d-block w-100"
-                  alt="Image 3"
-                />
+                  alt="Image 3" />
               </div>
               <!-- Slide 4 -->
               <div class="carousel-item">
                 <img
                   src="images\iconbrooke.jpg"
                   class="d-block w-100"
-                  alt="Image 4"
-                />
+                  alt="Image 4" />
               </div>
               <!-- Slide 5 -->
-              <div class="carousel-item">
+              <img class="carousel-item">
                 <img
                   src="images\volleyballbrooke.jpg"
                   class="d-block w-100"
-                  alt="Image 5"
-                />
-              </div>
+                  alt="Image 5" />
+              </img>
             </div>
 
             <!-- Controls -->
@@ -139,24 +133,20 @@
               class="carousel-control-prev"
               type="button"
               data-bs-target="#homeCarousel"
-              data-bs-slide="prev"
-            >
+              data-bs-slide="prev">
               <span
                 class="carousel-control-prev-icon"
-                aria-hidden="true"
-              ></span>
+                aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </button>
             <button
               class="carousel-control-next"
               type="button"
               data-bs-target="#homeCarousel"
-              data-bs-slide="next"
-            >
+              data-bs-slide="next">
               <span
                 class="carousel-control-next-icon"
-                aria-hidden="true"
-              ></span>
+                aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
           </div>
@@ -171,12 +161,14 @@
         <div class="row g-4">
           <!-- Project 1 -->
           <div class="col-lg-4 col-md-6">
-            <a href="./Tindog/index.html" target="_blank" style="text-decoration: none; color: inherit;">
+            <a href="./Tindog/index.html" target="_blank"
+              style="text-decoration: none; color: inherit;">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Project 1- Tin Dog</h5>
                   <p class="small-desc">
-                    Tin Dog is a website where your dog can meet other dogs in the area!
+                    Tin Dog is a website where your dog can meet other dogs in
+                    the area!
                   </p>
                   <div class="go-corner"></div>
                 </div>
@@ -185,7 +177,8 @@
           </div>
           <!-- Project 2 -->
           <div class="col-lg-4 col-md-6">
-            <a href="./pricingtable/index.html" target="_blank" style="text-decoration: none; color: inherit;">
+            <a href="./pricingtable/index.html" target="_blank"
+              style="text-decoration: none; color: inherit;">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Project 2- Pricing Table</h5>
@@ -199,7 +192,8 @@
           </div>
           <!-- Project 3 -->
           <div class="col-lg-4 col-md-6">
-            <a href="./bootstrapintro/index.html" target="_blank" style="text-decoration: none; color: inherit;">
+            <a href="./bootstrapintro/index.html" target="_blank"
+              style="text-decoration: none; color: inherit;">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Project 3- Bootstrap Intro </h5>
@@ -211,9 +205,10 @@
               </div>
             </a>
           </div>
-<!-- Project 4 -->
+          <!-- Project 4 -->
           <div class="col-lg-4 col-md-6">
-            <a href=".\Speed Test website\index.html" target="_blank" style="text-decoration: none; color: inherit;">
+            <a href=".\Speed Test website\index.html" target="_blank"
+              style="text-decoration: none; color: inherit;">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Project 4- Speed Test website </h5>
@@ -226,9 +221,10 @@
             </a>
           </div>
 
-<!-- Project 5 -->
+          <!-- Project 5 -->
           <div class="col-lg-4 col-md-6">
-            <a href=".\Dice Game\dicee.html" target="_blank" style="text-decoration: none; color: inherit;">
+            <a href=".\Dice Game\dicee.html" target="_blank"
+              style="text-decoration: none; color: inherit;">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Project 5- Dice Roll Game </h5>
@@ -240,56 +236,70 @@
               </div>
             </a>
           </div>
-    </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
-      <div class="container">
-        <h2 class="text-center mb-4">Contact Me</h2>
-        <p class="text-center">
-            <a href="mailto:brooked1105@gmail.com" class="email-button">brooked1105@gmail.com</a>
-          </p>
-        <form method="POST" class="row g-3">
-          <div class="col-md-6">
-            <label for="name" class="form-label">Name</label>
-            <input
-              type="text"
-              id="name"
-              name="name"
-              class="form-control"
-              required
-            />
+          <!-- Project 6 -->
+          <div class="col-lg-4 col-md-6">
+            <a href=".\Music Producer\index.html" target="_blank"
+              style="text-decoration: none; color: inherit;">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Project 6- Music Producer </h5>
+                  <p class="small-desc">
+                    Listen to different types of drum sounds
+                  </p>
+                  <div class="go-corner"></div>
+                </div>
+              </div>
+            </a>
           </div>
-          <div class="col-md-6">
-            <label for="email" class="form-label">Email</label>
-            <input
-              type="email"
-              id="email"
-              name="email"
-              class="form-control"
-              required
-            />
-          </div>
-          <div class="col-12">
-            <label for="message" class="form-label">Message</label>
-            <textarea
-              id="message"
-              name="message"
-              rows="5"
-              class="form-control"
-              required
-            ></textarea>
-          </div>
-          <div class="col-12 text-center">
-            <button type="submit" class="btn btn-primary">Send</button>
-          </div>
-        </form>
-      </div>
-    </section>
+        </section>
 
-    <!-- Footer -->
-    <footer>
-      <p>&copy; 2024 Brooke Dominguez. All Rights Reserved.</p>
-    </footer>
-  </body>
-</html>
+        <!-- Contact Section -->
+        <section id="contact">
+          <div class="container">
+            <h2 class="text-center mb-4">Contact Me</h2>
+            <p class="text-center">
+              <a href="mailto:brooked1105@gmail.com"
+                class="email-button">brooked1105@gmail.com</a>
+            </p>
+            <form method="POST" class="row g-3">
+              <div class="col-md-6">
+                <label for="name" class="form-label">Name</label>
+                <input
+                  type="text"
+                  id="name"
+                  name="name"
+                  class="form-control"
+                  required />
+              </div>
+              <div class="col-md-6">
+                <label for="email" class="form-label">Email</label>
+                <input
+                  type="email"
+                  id="email"
+                  name="email"
+                  class="form-control"
+                  required />
+              </div>
+              <div class="col-12">
+                <label for="message" class="form-label">Message</label>
+                <textarea
+                  id="message"
+                  name="message"
+                  rows="5"
+                  class="form-control"
+                  required></textarea>
+              </div>
+              <div class="col-12 text-center">
+                <button type="submit" class="btn btn-primary">Send</button>
+              </div>
+            </form>
+          </div>
+        </section>
+
+        <!-- Footer -->
+        <footer>
+          <p>&copy; 2024 Brooke Dominguez. All Rights Reserved.</p>
+        </footer>
+      </body>
+    </html>
