--- a/index.html
+++ b/index.html
@@ -252,6 +252,23 @@
               </div>
             </a>
           </div>
+          
+           <!-- Project 7 -->
+             <div class="col-lg-4 col-md-6">
+            <a href="./Simon challenge/" target="_blank"
+              style="text-decoration: none; color: inherit;">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Project 7- Simon Challenge </h5>
+                  <p class="small-desc">
+                   Play a game to see your memory using Javascript
+                  </p>
+                  <div class="go-corner"></div>
+                </div>
+              </div>
+            </a>
+          </div>
+          
         </section>
 
         <!-- Contact Section -->
